# fcwps-python

./: .gitignore  README.md
handouts/: 1-1 Python Introduce.md  1-2 Group Objects.md  1-3 Conditional Statements, Loops.md  2-1 Function.md  2-2 Pyenv,Virtualenv,Comprehension.md  3-1 Exception, with, fileIO.md  3-2 RegEx, Lambda Function.md  3-3 class, oop.md  4-1 class, oop, module, package, poetry.md  5-1 decorator, socket.md  5-2 web scraping, flask.md  signup-hackerrank.md
resources/: Day 1. What is python.ipynb  Day 10. Module, Package, Decorator, Socket Programming.ipynb  Day 2. String, Group Objects(1) - list, tuple.ipynb  Day 3. Group Object(2) - dict, set, If statement, Loop.ipynb  Day 4. Ternary Operator, For, While, Function.ipynb  Day 5. Function, Comprehension.ipynb  Day 6. Comprehension, File IO, Error Exception.ipynb  Day 7. Exception, RegEx, Lambda.ipynb  Day 8. Filter, Reduce, OOP, Class.ipynb  Day 9. Class, OOP.ipynb  seongnam-population.csv
resources/flask/: server.py
resources/flask/templates/: index.html
resources/scrape-prac/: pyproject.toml  requests, beautifulsoup4.ipynb
resources/socket/: sock-client.py  sock-server.py
